fixing a highlighting issue plus collapse for solutions

--- a/css/default.css
+++ b/css/default.css
@@ -641,7 +641,6 @@ table tbody td img {
 }
 
 .innerfolder > a {
-  color: #f2f1f2 !important;
   font-size: 13px !important;
   font-family: "Roboto", Arial, Helvetica, sans-serif !important;
   display: flex;
